--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "name": "storybook-addon-markup-snapshots",
-  "private": true,
   "version": "0.0.0",
+  "private": true,
   "type": "module",
   "scripts": {
     "build": "tsc -b && vite build",
+    "build-storybook": "storybook build",
     "lint": "eslint .",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "test": "vitest"
   },
   "dependencies": {
+    "diff": "^8.0.1",
+    "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
@@ -18,6 +21,7 @@
     "@storybook/addon-a11y": "^9.0.0-rc.0",
     "@storybook/addon-vitest": "^9.0.0-rc.0",
     "@storybook/react-vite": "^9.0.0-rc.0",
+    "@types/node": "^22.15.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
