--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
-    "@storybook/addon-a11y": "^9.0.0-rc.0",
-    "@storybook/addon-vitest": "^9.0.0-rc.0",
-    "@storybook/react-vite": "^9.0.0-rc.0",
+    "@storybook/addon-a11y": "^9.0.0",
+    "@storybook/addon-vitest": "^9.0.0",
+    "@storybook/react-vite": "^9.0.0",
     "@types/node": "^22.15.19",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
@@ -31,10 +31,10 @@
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
-    "eslint-plugin-storybook": "^9.0.0-rc.0",
+    "eslint-plugin-storybook": "^9.0.0",
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
-    "storybook": "^9.0.0-rc.0",
+    "storybook": "^9.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
