--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
     "@storybook/addon-vitest": "^9.0.0",
     "@storybook/react-vite": "^9.0.0",
     "@types/node": "^22.15.19",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/refractor": "^3.3.0",
     "@vitejs/plugin-react": "^4.4.1",
     "@vitest/browser": "^3.1.3",
     "@vitest/coverage-v8": "^3.1.3",
@@ -34,6 +35,8 @@
     "eslint-plugin-storybook": "^9.0.0",
     "globals": "^16.0.0",
     "playwright": "^1.52.0",
+    "react-diff-view": "^3.3.1",
+    "refractor": "^3.3.0",
     "storybook": "^9.0.0",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.30.1",
