--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@storybook/icons": "^1.4.0",
     "diff": "^8.0.1",
     "prettier": "^3.5.3",
+    "prism-themes": "^1.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
