chore: first batch of documentation

--- a/package.json
+++ b/package.json
@@ -1,7 +1,20 @@
 {
-  "name": "storybook-addon-markup-snapshots",
-  "version": "0.0.0",
-  "private": true,
+  "name": "@kickstartds/storybook-addon-markup",
+  "version": "1.0.0",
+  "description": "Track markup changes with Storybook, integrates with the new Storybook 9.0+ Vitest-based testing framework",
+  "keywords": [
+    "storybook-addons",
+    "test",
+    "Markup",
+    "HTML",
+    "Change Tracking"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kickstartDS/storybook-addon-markup"
+  },
+  "license": "MIT",
+  "author": "Jonas Ulrich | ruhmesmeile GmbH",
   "type": "module",
   "scripts": {
     "build": "tsc -b && vite build",
@@ -44,5 +57,16 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5",
     "vitest": "^3.1.3"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org"
+  },
+  "storybook": {
+    "displayName": "Markup Tracking",
+    "supportedFrameworks": [
+      "react"
+    ],
+    "icon": "https://opencollective-production.s3.us-west-1.amazonaws.com/1e445ca0-fca9-11e9-a830-c36c137aded5.png"
   }
 }
