--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "test": "vitest"
   },
   "dependencies": {
-    "@storybook/icons": "^1.4.0",
     "diff": "^8.0.1",
+    "linked-list-typed": "^2.0.4",
     "prettier": "^3.5.3",
     "prism-themes": "^1.9.0",
     "react": "^18.2.0",
@@ -35,6 +35,7 @@
     "@eslint/js": "^9.25.0",
     "@storybook/addon-a11y": "^9.0.0",
     "@storybook/addon-vitest": "^9.0.0",
+    "@storybook/icons": "^1.4.0",
     "@storybook/react-vite": "^9.0.0",
     "@types/node": "^22.15.19",
     "@types/react": "^18.2.0",
